[package]

name = "concurrency_project"
version = "0.1.0"
authors = ["Dylan <dylan.dvorachek@gmail.com>"]

[workspace]

members = [
    "physics",
    "thread_pool",
    ]

[dependencies]

physics = { path = "./physics" }
thread_pool = { path = "./thread_pool" }
piston_window = "0.74.0"
find_folder = "0.3.0"
piston-ai_behavior = "0.26.0"
piston2d-sprite = "0.47.0"
image = "0.20.0"
piston2d-drag_controller = "0.24.0"
gfx = "0.17.1"
gfx_device_gl = "0.15.0"
vecmath = "0.3.0"
camera_controllers = "0.26.0"
rand = "0.6.0"
shader_version = "0.3.0"